fixed cards on mobile screen

--- a/resources/less/metager/pages/resultpage/quicktips.less
+++ b/resources/less/metager/pages/resultpage/quicktips.less
@@ -25,7 +25,9 @@
     }
 
     .quicktip {
-        .card;
+
+        box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.12), 0px 0px 1px 0px rgba(0, 0, 0, 0.24);
+        border: 1px solid @border-color ;
         position: relative;
 
         details[open=""] .quicktip-extender {
